--- a/build
+++ b/build
@@ -2,7 +2,7 @@
 
 DATE=$(date -u +"%Y-%m-%dT%T%z")
 RUBY_VERSION=2.6.5
-IMAGE_VERSION=1
+IMAGE_VERSION=2
 VERSION="${RUBY_VERSION}-${IMAGE_VERSION}"
 
 docker build --file image/base/Dockerfile . \
@@ -11,4 +11,6 @@ docker build --file image/base/Dockerfile . \
   --label "org.opencontainers.image.title=ruby-base" \
   --label "org.opencontainers.image.source=https://github.com/xe-gr/ruby-base-docker" \
   --label "org.opencontainers.image.version=${VERSION}" \
-  --tag "xegr/ruby-base:${VERSION}"
+  --tag "xegr/ruby-base:${VERSION}" \
+  --no-cache \
+  --squash
