Add shared-mime-info as system dependency
This is required by mimemagic gem >= 0.3.7.
For more info see:

* https://github.com/rails/rails/issues/41750
* https://github.com/mimemagicrb/mimemagic

--- a/image/base/Dockerfile
+++ b/image/base/Dockerfile
@@ -13,6 +13,7 @@ RUN set -eux \
     curl \
     gnupg \
     xz-utils \
+    shared-mime-info \
     sudo \
     pkg-config \
     build-essential \
